--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
 <script>
   /* global nn */
   
-  // replace this with your own GIF
   const gifURL = 'phoenix.gif'
-  // replace this with a color that compliments your GIF
   const bgColor = '#e585ca'
   
-  function create_gif(x, y)
-    
+  function create_gif(x, y, w, h, url){
+    nn.create('img').set({'src': url}).css({
+      position: 'absolute',
+      left: `${x}px`,
+      top: `${y}px`,
+      width: `${w}px`,
+      height: `${h}px`
+    }).addTo('body')
   }
   
   function setup(){
     nn.get('body').css({'background-color': bgColor})
-    
+    x = nn.width / 2
+    y = nn.height / 2
+    create_gif(x, y, 140, 140, gifURL)
   }
   
   nn.on('load', setup)
