--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   
   function setup(){
     nn.get('body').css({'background-color': bgColor})
-    x = nn.width / 2
-    y = nn.height / 2
+    const x = nn.width / 2
+    const y = nn.height / 2
     create_gif(x, y, 140, 140, gifURL)
   }
   
