--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       left: `${x}px`,
       top: `${y}px`,
       width: `${w}px`,
-      height: `${h}px`
+      height: `${h}px`,
+      border: '1px solid black'
     }).addTo('body')
   }
   
